objects/EUR_CRM_Geo_Hierarchy__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_City_Name__c</fullName>
        <label>City Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_District_Name__c</fullName>
        <label>District Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Region_Name__c</fullName>
        <label>Region Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Geo Hierarchy (EU)</label>
    <nameField>
        <label>Geo Hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geo Hierarchy (EU)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>